--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=DynaPuff&family=Montserrat:wght@500&family=Permanent+Marker&family=Poppins&family=Roboto+Slab&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barber Shop</title>
 </head>
